--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
+
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Enroll</a>
             </li>
@@ -51,13 +54,12 @@
       </div>
     </nav>
 
-    <header class="masthead">
+    <header class="masthead" id="home">
       <div class="container h-100">
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">"Self Learn To Code"</h1>
-              <img src="logo.png" alt="">
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
             </div>
           </div>
@@ -88,7 +90,6 @@
             <div class="header-content mx-auto">
               <h3 class="mb-5">Go to Google Hangouts</h3>
               <h3>Send invite to codemghrib</h3>
-              <img src="logo.png" alt="">
               <h3 class="mt-5">A self taught developer will get in touch with you soon to get you enrolled</h3>
             </div>
           </div>
@@ -99,6 +100,29 @@
           </div>
         </div>
       </div>
+    </header>
+
+    <header class="masthead contact" id="contact">
+      <div class="container h-100">
+        <div class="row h-100">
+          <div class="col-lg-5 my-auto mx-auto">
+            <div class="device-container text-center">
+              <a href="#home" class="js-scroll-trigger"><img class="img-fluid" src="img/logo.png" alt=""></a>
+            </div>
+          </div>
+          <div class="col-lg-7 my-auto">
+            <div class="header-content mx-auto mt-5">
+              <h3 class="">Codemghrib, Inc</h3>
+              <h4>2837 24th st</h4>
+              <h3 class="">San Francisco, CA 94110</h3>
+              <h3>codemghrib.com</h3>
+              <h3>codemghrib@gmail.com</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
 
     <!--<section class="download bg-primary text-center" id="">
       <div class="container">
